<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input"
        app:layout_constraintVertical_bias="0.94"
        tools:layout_editor_absoluteX="59dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/clear"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="clearBtn"
                android:text="@string/clear"
                android:textColor="#F3ECEC"
                android:textSize="20sp"
                app:backgroundTint="#E91E63" />

            <Button
                android:id="@+id/parenthasis"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="parenthasisBtn"
                android:text="@string/parenthesis"


                android:textColor="#ffffff"
                android:textSize="20sp"
                app:backgroundTint="#2196F3"
                app:iconTint="#F3E5E5" />

            <Button
                android:id="@+id/power"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="powerBtn"
                android:text="@string/Exponent"
                android:textColor="#ffffff"
                android:textSize="20sp"
                app:backgroundTint="#2196F3"
                app:iconTint="#F3E5E5" />

            <Button
                android:id="@+id/division"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="divisionBtn"
                android:text="@string/divide"

                android:textColor="#ffffff"
                android:textSize="20sp"
                app:backgroundTint="#2196F3"
                app:iconTint="#F3E5E5" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/seven"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="sevenBtn"
                android:text="@string/seven"
                android:textColor="#ffffff"
                android:textSize="20sp"
                app:backgroundTint="#2196F3"
                app:iconTint="#F3E5E5" />

            <Button
                android:id="@+id/eight"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="eightBtn"
                android:text="@string/eight"
                android:textColor="#ffffff"
                android:textSize="20sp"
                app:backgroundTint="#2196F3"
                app:iconTint="#F3E5E5" />

            <Button
                android:id="@+id/nine"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="nineBtn"
                android:text="@string/nine"
                android:textColor="#ffffff"
                android:textSize="20sp"
                app:backgroundTint="#2196F3"
                app:iconTint="#F3E5E5" />

            <Button
                android:id="@+id/multiply"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="multiplyBtn"
                android:text="@string/multiply"
                android:textColor="#ffffff"
                android:textSize="20sp"
                app:backgroundTint="#2196F3"
                app:iconTint="#F3E5E5" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/four"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="fourBtn"
                android:text="@string/four"

                android:textColor="#ffffff"
                android:textSize="20sp"
                app:backgroundTint="#2196F3"
                app:iconTint="#F3E5E5" />

            <Button
                android:id="@+id/five"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="fiveBtn"
                android:text="@string/five"
                android:textColor="#ffffff"
                android:textSize="20sp"
                app:backgroundTint="#2196F3"
                app:iconTint="#F3E5E5" />

            <Button
                android:id="@+id/six"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="sixBtn"
                android:text="@string/six"
                android:textColor="#ffffff"
                android:textSize="20sp"
                app:backgroundTint="#2196F3"
                app:iconTint="#F3E5E5" />

            <Button
                android:id="@+id/subtract"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="subtractionBtn"
                android:text="@string/subtract"
                android:textColor="#ffffff"
                android:textSize="20sp"
                app:backgroundTint="#2196F3"
                app:iconTint="#F3E5E5" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/one"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="OneBtn"
                android:text="@string/one"
                android:textColor="#ffffff"
                android:textSize="20sp"
                app:backgroundTint="#2196F3"
                app:iconTint="#F3E5E5" />

            <Button
                android:id="@+id/two"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="twoBtn"
                android:text="@string/two"
                android:textColor="#ffffff"
                android:textSize="20sp"
                app:backgroundTint="#2196F3"
                app:iconTint="#F3E5E5" />

            <Button
                android:id="@+id/three"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="threeBtn"
                android:text="@string/three"
                android:textColor="#ffffff"
                android:textSize="20sp"
                app:backgroundTint="#2196F3"
                app:iconTint="#F3E5E5" />

            <Button
                android:id="@+id/addition"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="addtionBtn"
                android:text="@string/add"
                android:textColor="#ffffff"
                android:textSize="20sp"
                app:backgroundTint="#2196F3"
                app:iconTint="#F3E5E5" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/zero"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="zeroBtn"
                android:text="@string/zero"
                android:textColor="#ffffff"
                android:textSize="20sp"
                app:backgroundTint="#2196F3"
                app:iconTint="#F3E5E5" />

            <Button
                android:id="@+id/point"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="dotBtn"
                android:text="@string/point"
                android:textColor="#ffffff"
                android:textSize="20sp"
                app:backgroundTint="#2196F3"
                app:iconTint="#F3E5E5" />

            <Button
                android:id="@+id/equal"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="resultBtn"
                android:text="@string/equal"
                android:textColor="#ffffff"
                android:textSize="20sp"
                app:backgroundTint="#2196F3"
                app:iconTint="#F3E5E5" />
        </TableRow>

    </TableLayout>

    <EditText
        android:id="@+id/input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:autofillHints="false"
        android:gravity="end"
        android:inputType="none"
        android:text="@string/display"

        android:textAlignment="textEnd"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/button37"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="113dp"
        android:layout_height="73dp"
        android:layout_margin="5dp"
        android:background="@drawable/circle"
        android:contentDescription="@string/backspeace"
        android:onClick="backspeaceBtn"
        android:textColor="#131111"


        app:layout_constraintBottom_toTopOf="@+id/tableLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/backspeace" />

</androidx.constraintlayout.widget.ConstraintLayout>